--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -12,50 +12,74 @@
   --t007-toast-max-width: 100%;
   --t007-toast-min-height: 4.25rem;
   --t007-toast-height: fit-content;
-  --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5); 
-  --t007-toast-padding: calc(var(--t007-toast-unit)/2.25);
-  --t007-toast-border-radius: calc(var(--t007-toast-unit)/3);
+  --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5);
+  --t007-toast-padding: calc(var(--t007-toast-unit) / 2.25);
+  --t007-toast-border-radius: calc(var(--t007-toast-unit) / 3);
   --t007-toast-progress-background: var(--t007-toast-type-color);
-  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/.2);
+  --t007-toast-progress-backdrop-background: rgb(
+    from var(--t007-toast-type-color) r g b/.2
+  );
   --t007-toast-image-width: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
-  --t007-toast-image-border-radius: calc(var(--t007-toast-unit)/5);
+  --t007-toast-image-border-radius: calc(var(--t007-toast-unit) / 5);
   --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.5);
   --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.5);
-  --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * .85);
+  --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * 0.85);
   --t007-toast-icon-line-height: 1.25;
   --t007-toast-font-color: var(--t007-toast-type-color);
-  --t007-toast-font-size: calc(var(--t007-toast-unit)/1.05);
+  --t007-toast-font-size: calc(var(--t007-toast-unit) / 1.05);
   --t007-toast-max-lines: 7;
-  --t007-toast-x-size: calc(var(--t007-toast-unit)*1.75);
+  --t007-toast-x-size: calc(var(--t007-toast-unit) * 1.75);
   --t007-toast-x-color: red;
 }
 
 :root {
-  --t007-current-flex-direction: column;
-  --t007-current-drag-x: 0;
-  --t007-current-drag-opacity: 1;
+  --t007-toast-flex-direction: column;
 }
 
 @keyframes xSlideBounceIn {
-  from { transform: translateX(var(--t-from)); } 
-  50% { transform: translateX(var(--t-bounce)); } 
-  to { transform: translateX(var(--t-to)); }
+  from {
+    transform: translateX(var(--t-from));
+  }
+  50% {
+    transform: translateX(var(--t-bounce));
+  }
+  to {
+    transform: translateX(var(--t-to));
+  }
 }
 @keyframes xSlideBounceOut {
-  from { transform: translateX(var(--t-to)); } 
-  50% { transform: translateX(var(--t-bounce)); } 
-  to { transform: translateX(var(--t-from)); }
+  from {
+    transform: translateX(var(--t-to));
+  }
+  50% {
+    transform: translateX(var(--t-bounce));
+  }
+  to {
+    transform: translateX(var(--t-from));
+  }
 }
 @keyframes ySlideBounceIn {
-  from { transform: translateY(var(--t-from)); } 
-  50% { transform: translateY(var(--t-bounce)); } 
-  to { transform: translateY(var(--t-to)); }
+  from {
+    transform: translateY(var(--t-from));
+  }
+  50% {
+    transform: translateY(var(--t-bounce));
+  }
+  to {
+    transform: translateY(var(--t-to));
+  }
 }
 @keyframes ySlideBounceOut {
-  from { transform: translateY(var(--t-to)); } 
-  50% { transform: translateY(var(--t-bounce)); } 
-  to { transform: translateY(var(--t-from)); }
+  from {
+    transform: translateY(var(--t-to));
+  }
+  50% {
+    transform: translateY(var(--t-bounce));
+  }
+  to {
+    transform: translateY(var(--t-from));
+  }
 }
 
 .t007-toast-container,
@@ -71,9 +95,13 @@
   margin: var(--t007-toast-margin);
   max-width: calc(100dvw - (var(--t007-toast-margin) * 2));
   display: flex;
-  flex-direction: var(--t007-current-flex-direction);
-  gap: .5rem;
+  flex-direction: var(--t007-toast-flex-direction);
+  gap: 0.5rem;
   z-index: 2147483647;
+}
+
+.t007-toast-container.newest-on-top {
+  --t007-toast-flex-direction: column-reverse;
 }
 
 .t007-toast-container[data-position^="top-"] {
@@ -107,7 +135,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  gap: calc(var(--t007-toast-unit)/2.5);
+  gap: calc(var(--t007-toast-unit) / 2.5);
   min-width: var(--t007-toast-min-width);
   width: var(--t007-toast-width);
   max-width: var(--t007-toast-max-width);
@@ -120,7 +148,9 @@
   -webkit-backdrop-filter: blur(var(--t007-toast-background-blur));
   backdrop-filter: blur(var(--t007-toast-background-blur));
   overflow: hidden;
-  transition: transform 300ms ease, opacity 300ms ease;
+  transition:
+    transform 300ms ease,
+    opacity 300ms ease;
   will-change: transform, opacity;
   animation-timing-function: var(--t007-toast-animation-timing-function);
   animation-fill-mode: forwards;
@@ -156,7 +186,8 @@
   --t-bounce: 10%;
 }
 
-.t007-toast-container[data-position="bottom-center"] .t007-toast, .t007-toast-container[data-position="center-center"] .t007-toast {
+.t007-toast-container[data-position="bottom-center"] .t007-toast,
+.t007-toast-container[data-position="center-center"] .t007-toast {
   --t-from: 100%;
   --t-bounce: -10%;
 }
@@ -164,7 +195,9 @@
 .t007-toast:is(.info, .success, .error, .warning) {
   --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-progress-background: var(--t007-toast-type-color);
-  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/.2);
+  --t007-toast-progress-backdrop-background: rgb(
+    from var(--t007-toast-type-color) r g b/.2
+  );
 }
 
 .t007-toast.info {
@@ -184,29 +217,32 @@
 }
 
 .t007-toast.progress::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: calc(100% - var(--progress) * 100%);
-  height: calc(var(--t007-toast-unit)/4);
+  height: calc(var(--t007-toast-unit) / 4);
   background: var(--t007-toast-progress-background);
   transition: width ease;
 }
 
 .t007-toast.progress::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: calc(var(--t007-toast-unit)/4);
+  height: calc(var(--t007-toast-unit) / 4);
   background: var(--t007-toast-progress-backdrop-background);
   transition: width ease;
 }
 
-.t007-toast:not(.has-icon) .t007-toast-image-wrapper:not(:has(.t007-toast-image)),
-.t007-toast-image-wrapper:not(:has(.t007-toast-image)):has(.t007-toast-icon:empty) {
+.t007-toast:not(.has-icon)
+  .t007-toast-image-wrapper:not(:has(.t007-toast-image)),
+.t007-toast-image-wrapper:not(:has(.t007-toast-image)):has(
+    .t007-toast-icon:empty
+  ) {
   display: none;
 }
 
@@ -256,8 +292,8 @@
 .t007-toast-body {
   flex-grow: 1;
   height: fit-content;
-  border-radius: calc(var(--t007-toast-unit)/5);
-  padding: calc(var(--t007-toast-unit)/7.5);
+  border-radius: calc(var(--t007-toast-unit) / 5);
+  padding: calc(var(--t007-toast-unit) / 7.5);
   overflow: hidden;
 }
 
@@ -268,10 +304,10 @@
   line-clamp: var(--t007-toast-max-lines);
   word-break: break-word;
   text-align: left;
-  color: var(--t007-toast-font-color); 
+  color: var(--t007-toast-font-color);
   font-size: var(--t007-toast-font-size);
-  -webkit-text-stroke: .2px rgba(0, 0, 0, 0.45);
-  text-shadow: .5px .5px 1px rgba(0, 0, 0, 0.45);
+  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
   margin: 0;
   z-index: 1;
 }
@@ -282,10 +318,10 @@
   background: none;
   padding: 0;
   border: none;
-  line-height: .65;
+  line-height: 0.65;
   color: var(--t007-toast-x-color);
   font-size: var(--t007-toast-x-size);
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .t007-toast-cancel-button:hover {
@@ -299,6 +335,6 @@
 
 @media (max-width: 36rem) {
   :where(:root) {
-    --t007-toast-unit: .9rem;
+    --t007-toast-unit: 0.9rem;
   }
 }
