--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -2,6 +2,10 @@
   --t007-toast-font-family: inherit;
   --t007-toast-unit: 1rem;
   --t007-toast-type-color: whitesmoke;
+  --t007-toast-info-color: #3498db;
+  --t007-toast-success-color: #27ae60;
+  --t007-toast-error-color: #e74c3c;
+  --t007-toast-warning-color: #f1c40f;
   --t007-toast-background: rgb(from black r g b/.4);
   --t007-toast-background-blur: 10px;
   --t007-toast-animation-duration: 250ms;
@@ -14,7 +18,10 @@
   --t007-toast-height: fit-content;
   --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5);
   --t007-toast-padding: calc(var(--t007-toast-unit) / 2.25);
+  --t007-toast-border: unset;
   --t007-toast-border-radius: calc(var(--t007-toast-unit) / 3);
+  --t007-toast-box-shadow: unset;
+  --t007-toast-progress-height: calc(var(--t007-toast-unit) / 4);
   --t007-toast-progress-background: var(--t007-toast-type-color);
   --t007-toast-progress-backdrop-background: rgb(
     from var(--t007-toast-type-color) r g b/.2
@@ -28,6 +35,9 @@
   --t007-toast-icon-line-height: 1.25;
   --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-font-size: calc(var(--t007-toast-unit) / 1.05);
+  --t007-toast-font-weight: inherit;
+  --t007-toast-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
+  --t007-toast-text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
   --t007-toast-max-lines: 7;
   --t007-toast-x-size: calc(var(--t007-toast-unit) * 1.75);
   --t007-toast-x-color: red;
@@ -115,6 +125,7 @@
 .t007-toast-container[data-position^="center-"] {
   top: 50%;
   transform: translateY(-50%);
+  margin-block: 0;
 }
 
 .t007-toast-container[data-position$="-right"] {
@@ -128,6 +139,7 @@
 .t007-toast-container[data-position$="-center"] {
   left: 50%;
   translate: -50%;
+  margin-inline: 0;
 }
 
 .t007-toast {
@@ -144,7 +156,9 @@
   max-height: var(--t007-toast-max-height);
   padding: var(--t007-toast-padding);
   background: var(--t007-toast-background);
+  border: var(--t007-toast-border);
   border-radius: var(--t007-toast-border-radius);
+  box-shadow: var(--t007-toast-box-shadow);
   -webkit-backdrop-filter: blur(var(--t007-toast-background-blur));
   backdrop-filter: blur(var(--t007-toast-background-blur));
   overflow: hidden;
@@ -201,19 +215,19 @@
 }
 
 .t007-toast.info {
-  --t007-toast-type-color: #3498db;
+  --t007-toast-type-color: var(--t007-toast-info-color);
 }
 
 .t007-toast.success {
-  --t007-toast-type-color: #27ae60;
+  --t007-toast-type-color: var(--t007-toast-success-color);
 }
 
 .t007-toast.error {
-  --t007-toast-type-color: #e74c3c;
+  --t007-toast-type-color: var(--t007-toast-error-color);
 }
 
 .t007-toast.warning {
-  --t007-toast-type-color: #f1c40f;
+  --t007-toast-type-color: var(--t007-toast-warning-color);
 }
 
 .t007-toast.progress::before {
@@ -222,7 +236,7 @@
   bottom: 0;
   left: 0;
   width: calc(100% - var(--progress) * 100%);
-  height: calc(var(--t007-toast-unit) / 4);
+  height: var(--t007-toast-progress-height);
   background: var(--t007-toast-progress-background);
   transition: width ease;
 }
@@ -233,7 +247,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: calc(var(--t007-toast-unit) / 4);
+  height: var(--t007-toast-progress-height);
   background: var(--t007-toast-progress-backdrop-background);
   transition: width ease;
 }
@@ -279,8 +293,9 @@
   line-height: var(--t007-toast-icon-line-height);
 }
 
-:where(.t007-toast-icon > *) {
-  all: inherit;
+.t007-toast-icon > svg {
+  width: var(--t007-toast-icon-width);
+  height: var(--t007-toast-icon-height);
 }
 
 .t007-toast-image-wrapper .t007-toast-image {
@@ -306,8 +321,9 @@
   text-align: left;
   color: var(--t007-toast-font-color);
   font-size: var(--t007-toast-font-size);
-  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
-  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
+  font-weight: var(--t007-toast-font-weight);
+  -webkit-text-stroke: var(--t007-toast-text-stroke);
+  text-shadow: var(--t007-toast-text-shadow);
   margin: 0;
   z-index: 1;
 }
