--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -1,7 +1,8 @@
 :where(:root) {
   --t007-input-font-family: inherit;
   --t007-input-color: black;
-  --t007-input-icon-color: var(--t007-input-color);
+  --t007-input-icon-fill: var(--t007-input-color);
+  --t007-input-icon-stroke: unset;
   --t007-input-base-color: rgb(from var(--t007-input-color) r g b/0.45);
   --t007-input-hover-color: rgb(from var(--t007-input-color) r g b/0.8);
   --t007-input-focus-color: rgb(from var(--t007-input-color) r g b/1);
@@ -35,6 +36,8 @@
   --t007-input-icon-height: unset;
   --t007-input-padding: 0.75rem;
   --t007-input-border-radius: 0.25rem;
+  --t007-input-border-style: solid;
+  --t007-input-active-border-style: var(--t007-input-border-style);
   --t007-input-border-width: 1px;
   --t007-input-active-border-width: 2px;
   --t007-input-checkbox-font-size: 0.9rem;
@@ -77,9 +80,9 @@
 .t007-input-field *::before {
   box-sizing: border-box;
   font-family: var(--t007-input-font-family);
-  isolation: isolate;
-  transition-property: transform, filter, background-color, color, border, right,
-    left, top, bottom, width, height, font-size, scale;
+  transition-property:
+    transform, filter, background-color, color, border, right, left, top,
+    bottom, width, height, font-size, scale;
   transition-duration: 150ms;
   transition-timing-function: ease;
 }
@@ -97,6 +100,7 @@
   width: var(--t007-input-width);
   max-width: 100%;
   padding-top: calc((var(--t007-input-floating-label-font-size) * 1.3) * 0.5);
+  isolation: isolate;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -119,21 +123,32 @@
   );
 }
 
+.t007-input-field:where(.t007-input-is-wrapper):where(
+    :has([data-wrapper-filled="true"]),
+    :has(
+      :is([contenteditable="true"]):is([data-filled], :focus, :-webkit-autofill)
+    )
+  ),
+.t007-input-field.t007-input-is-wrapper:where(
+    :has([contenteditable="true"]:not(:empty)):not(
+        :has([contenteditable="true"] > br:only-child)
+      ):not(:has([contenteditable="true"] > :only-child > br:only-child))
+  ),
 .t007-input-field:where(
     :has(
-        .t007-input:is(
-            [data-filled],
-            :focus,
-            :-webkit-autofill,
-            :not(:placeholder-shown):where(
-                :not(select):not([type="date"]):not([type="time"]):not(
-                    [type="datetime-local"]
-                  ):not([type="month"]):not([type="week"]):not(
-                    [type="color"]
-                  ):not([type="range"]):not([type="file"])
-              )
-          )
-      )
+      .t007-input:is(
+          [data-filled],
+          :focus,
+          :-webkit-autofill,
+          :not(:placeholder-shown):where(
+              :not(select):not([type="date"]):not([type="time"]):not(
+                  [type="datetime-local"]
+                ):not([type="month"]):not([type="week"]):not(
+                  [type="color"]
+                ):not([type="range"]):not([type="file"])
+            )
+        )
+    )
   ) {
   --t007-input-current-color: var(--t007-input-focus-color);
   --t007-input-current-text-color: var(--t007-input-focus-text-color);
@@ -171,12 +186,17 @@
 .t007-input-wrapper {
   position: relative;
   min-width: 3rem;
-  height: var(--t007-input-height);
   width: 100%;
-  padding: var(--t007-input-padding);
-  border-radius: var(--t007-input-border-radius);
+  height: var(--t007-input-height);
   display: inline-flex;
   align-items: baseline;
+  padding: var(--t007-input-padding);
+  border-radius: var(--t007-input-border-radius);
+}
+
+.t007-input-field.t007-input-is-wrapper .t007-input-wrapper {
+  min-height: fit-content;
+  padding: var(--t007-input-border-width);
 }
 
 .t007-input-wrapper:has(textarea) {
@@ -185,6 +205,10 @@
 
 .t007-input-wrapper:has(.t007-input-icon) {
   padding-right: 0;
+}
+
+.t007-input-field.t007-input-icon-override .t007-input-wrapper {
+  padding-right: 12px;
 }
 
 .t007-input-outline {
@@ -196,6 +220,7 @@
   height: 100%;
   pointer-events: none;
   text-align: left;
+  border-radius: inherit;
 }
 
 .t007-input-outline > * {
@@ -203,29 +228,35 @@
   border-style: solid;
   border-color: var(--t007-input-current-color);
   border-width: var(--t007-input-border-width);
+  border-style: var(--t007-input-border-style);
   pointer-events: none;
 }
 
+.t007-input-field.t007-input-is-wrapper:has(:is([contenteditable="true"]):focus)
+  .t007-input-outline
+  > *,
 .t007-input-field:has(.t007-input:focus) .t007-input-outline > * {
-  border-width: var(--t007-input-border-active-width);
+  border-width: var(--t007-input-active-border-width);
+  border-style: var(--t007-input-active-border-style);
 }
 
 .t007-input-outline-leading {
   width: 0.75rem;
-  border-top-left-radius: 0.25rem;
+  border-top-left-radius: inherit;
   border-top-right-radius: 0;
-  border-bottom-left-radius: 0.25rem;
+  border-bottom-left-radius: inherit;
   border-bottom-right-radius: 0;
-  border-right: none;
+  border-right: none !important;
 }
 
 .t007-input-outline-trailing {
   flex: 1;
+  min-width: var(--t007-input-border-radius);
   border-top-left-radius: 0;
-  border-top-right-radius: 0.25rem;
+  border-top-right-radius: inherit;
   border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0.25rem;
-  border-left: none;
+  border-bottom-right-radius: inherit;
+  border-left: none !important;
 }
 
 .t007-input-outline-notch {
@@ -233,8 +264,8 @@
   position: relative;
   width: fit-content;
   max-width: calc(100% - 0.75rem);
-  border-left: none;
-  border-right: none;
+  border-left: none !important;
+  border-right: none !important;
   transition-property: border-bottom;
 }
 
@@ -242,6 +273,7 @@
   max-width: calc(100% - 3.75rem);
 }
 
+.t007-input-field.t007-input-is-wrapper .t007-input-outline-notch,
 .t007-input-field:has(
     .t007-input:is(
         [data-filled],
@@ -272,17 +304,17 @@
       )
   )
   .t007-input-outline-notch {
-  border-top: none;
+  border-top: none !important;
 }
 
 .t007-input-floating-label {
   position: relative;
-  color: var(--t007-input-current-color);
-  opacity: 0.85;
+  top: calc(var(--t007-input-height) / 2);
   display: block;
   max-width: 100%;
-  top: calc(var(--t007-input-height) / 2);
   transform: translateY(-50%);
+  color: var(--t007-input-current-color);
+  opacity: 0.85;
   font-weight: 400;
   font-size: var(--t007-input-font-size);
   line-height: 1.3;
@@ -297,6 +329,7 @@
   margin-inline: 0.25rem;
 }
 
+.t007-input-field.t007-input-is-wrapper .t007-input-floating-label,
 .t007-input-field:has(
     .t007-input:is(
         [data-filled],
@@ -338,6 +371,8 @@
   max-width: 133%;
 }
 
+.t007-input-field.t007-input-is-wrapper
+  .t007-input-floating-label.t007-input-shake,
 .t007-input-field:has(
     .t007-input:is(
         [data-filled],
@@ -370,7 +405,8 @@
   .t007-input-floating-label.t007-input-shake {
   transform: translateY(
       calc(
-        -1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
+        -1 *
+          ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
       )
     )
     translateX(0.25rem);
@@ -386,6 +422,7 @@
   height: 100%;
   width: 100%;
   min-width: 0;
+  min-height: 0;
   padding: 0;
   font-family: inherit;
   outline: none !important;
@@ -428,7 +465,8 @@
     (
         (var(--t007-input-height) / 2) -
           ((var(--t007-input-font-size) / 1.25) / 2)
-      ) - ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
+      ) -
+      ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
   );
 }
 
@@ -468,8 +506,10 @@
 :where(
     .t007-input[type="file"].t007-input-image-selected
   )::file-selector-button {
-  background: center/contain no-repeat var(--t007-input-image-src),
-    linear-gradient(black, black), black;
+  background:
+    center/contain no-repeat var(--t007-input-image-src),
+    linear-gradient(black, black),
+    black;
   color: transparent;
   padding-block: var(--t007-input-sb-padding-block);
   border: none;
@@ -483,7 +523,12 @@
 
 .t007-input:-webkit-autofill {
   transition: background-color 50000000s ease-in-out 0s !important;
-  -webkit-text-fill-color: var(--t007-input-current-color) !important;
+  -webkit-text-fill-color: var(--t007-input-current-text-color) !important;
+}
+
+.t007-input-field.t007-input-icon-override
+  input::-webkit-calendar-picker-indicator {
+  opacity: 0;
 }
 
 .t007-input-icon {
@@ -496,19 +541,34 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  pointer-events: none;
+}
+
+.t007-input-icon:is(
+    .t007-input-password-hidden-icon,
+    .t007-input-password-visible-icon
+  ) {
+  pointer-events: all;
 }
 
 .t007-input-icon:hover {
   background-color: rgba(0, 0, 0, 0.02);
 }
 
+.t007-input-field.t007-input-icon-override .t007-input-icon {
+  position: absolute;
+  right: 0;
+}
+
+.t007-input-field.t007-input-icon-override svg,
 .t007-input-icon svg {
   width: var(--t007-input-icon-width);
   height: var(--t007-input-icon-height);
 }
 
 .t007-input-icon svg path {
-  fill: var(--t007-input-icon-color);
+  fill: var(--t007-input-icon-fill);
+  stroke: var(--t007-input-icon-stroke);
 }
 
 .t007-input-field:has(input[type="password"]) .t007-input-password-visible-icon,
@@ -552,12 +612,12 @@
 }
 
 .t007-input-helper-scroll-assist.left {
-  left: -0rem;
+  left: -0.25rem;
   --gradient-dir: to right;
 }
 
 .t007-input-helper-scroll-assist.right {
-  right: -0rem;
+  right: -0.25rem;
   --gradient-dir: to left;
 }
 
@@ -786,6 +846,17 @@
   transform: rotate(45deg);
 }
 
+.t007-input-field.t007-input-indeterminate .t007-input-checkbox-tag {
+  top: 50%;
+  left: 50.5%;
+  width: 60%;
+  height: var(--t007-input-checkmark-width);
+  margin: 0;
+  transform: translate(-50%, -50%);
+  background-color: var(--t007-input-checkmark-color);
+  border: none;
+}
+
 .t007-input-radio-tag {
   width: 70%;
   height: 72.5%;
@@ -808,6 +879,7 @@
 .t007-input-checkbox-box,
 .t007-input-radio-box {
   position: relative;
+  outline: none !important;
 }
 
 /* Pulse bubble effect on click */
@@ -823,7 +895,9 @@
   background: var(--t007-input-ripple-color);
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  transition: width 0.3s ease, height 0.3s ease, opacity 0.3s ease;
+  transition-property: width, height, opacity;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
   opacity: 0;
   pointer-events: none;
 }
